<resources>
    <string name="app_name">admin</string>
    <string name="Dashboard">Dashboard</string>
    <string name="banner">Banner</string>
    <string name="product">Product</string>
    <string name="category">Category</string>
    <string name="user">User</string>
    <string name="bill">Bill</string>
    <string name="order">Order</string>
    <string name="recent_order">Recent Order</string>
    <string name="title">Title</string>
    <string name="add">+ Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="size_quantity">Size/Quantity</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="image">Image</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="add_size">Add size</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_question">Are you sure you want to delete this item?</string>
    <string name="brand">Brand</string>
    <string name="select_brand">Select brand</string>
    <string name="plus">+</string>
</resources>