<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeAdminFragment"
    tools:ignore="ContentDescription, UseCompoundDrawables">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/admin_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_logout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Dashboard"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_x2" />
    </com.google.android.material.appbar.MaterialToolbar>

    <HorizontalScrollView
        android:id="@+id/ll_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x2"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/x2"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_toolbar">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_banner"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginEnd="@dimen/x2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_image_solid" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/banner"
                    android:textColor="?attr/colorOnPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_product"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginEnd="@dimen/x2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_box_solid" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/product"
                    android:textColor="?attr/colorOnPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_category"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginEnd="@dimen/x2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_list_solid" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/category"
                    android:textColor="?attr/colorOnPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_user"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginEnd="@dimen/x2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_user_solid" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/user"
                    android:textColor="?attr/colorOnPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_order"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginEnd="@dimen/x2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_rectangle_list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/order"
                    android:textColor="?attr/colorOnPrimary" />

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <Spinner
        android:id="@+id/spinnerTimeframe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_manager" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerTimeframe" />

    <LinearLayout
        android:id="@+id/llMetrics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineChart">

        <TextView
            android:id="@+id/tvTotalOrders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Orders: 0"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_x1" />

        <TextView
            android:id="@+id/tvAvgOrderValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="AOV: 0"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_x1" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvRecent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/recent_order"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_x2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llMetrics" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRecent" />
</androidx.constraintlayout.widget.ConstraintLayout>